[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/QuestManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PhysicsUniverse.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/QuestSoundEffects.gd" type="Script" id=3]
[ext_resource path="res://fonts/corner_button_theme.tres" type="Theme" id=4]
[ext_resource path="res://audio/low_doo-doo-doo-doo.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/doot.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/ascending_bloop-bloop-bloop.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/coin.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/zz-zz-zz.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/high_ascending.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/20220313_exploration.mp3" type="AudioStream" id=11]
[ext_resource path="res://audio/notif_boop.wav" type="AudioStream" id=12]
[ext_resource path="res://fonts/base_theme.tres" type="Theme" id=13]
[ext_resource path="res://art/Square.png" type="Texture" id=14]
[ext_resource path="res://art/button_icons/SettingsIcon.png" type="Texture" id=15]
[ext_resource path="res://scripts/ToggleVisible.gd" type="Script" id=16]
[ext_resource path="res://fonts/ui_font_menu_large.tres" type="DynamicFont" id=17]

[node name="Main" type="Node"]

[node name="QuestManager" parent="." instance=ExtResource( 1 )]

[node name="AudioManager" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 0.1
autoplay = true
stream_paused = true
script = ExtResource( 3 )

[node name="coin" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 8 )
volume_db = 4.0

[node name="less_coin" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 8 )
volume_db = 4.0

[node name="quest_end" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 7 )
volume_db = 4.0

[node name="item" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 6 )
volume_db = 4.0

[node name="refuel" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 10 )
volume_db = 4.0

[node name="low_fuel" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 9 )
volume_db = 4.0

[node name="arrive" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 5 )
volume_db = 4.0

[node name="accepted_new" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 12 )
volume_db = 4.0

[node name="SettingsMenu" type="CanvasLayer" parent="."]

[node name="SettingPane" type="Control" parent="SettingsMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SettingsMenu/SettingPane"]
self_modulate = Color( 0.282353, 0.231373, 0.384314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu/SettingPane"]
anchor_right = 1.0
anchor_bottom = 0.89
margin_left = 15.0
margin_top = 15.0
margin_right = -18.0
margin_bottom = -10.4
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/SettingPane/ScrollContainer"]
margin_right = 400.0
margin_bottom = 128.0

[node name="BkgdMusicMuteCheck" type="CheckBox" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_right = 189.0
margin_bottom = 19.0
size_flags_horizontal = 0
pressed = true
text = "Mute background music"

[node name="SfxMuteCheck" type="CheckBox" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 151.0
margin_bottom = 42.0
size_flags_horizontal = 0
text = "Mute sound effects"

[node name="Label" type="Label" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 65.0
text = "Background Music Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BkgdMusicVolSlider" type="HSlider" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 400.0
margin_bottom = 85.0
rect_min_size = Vector2( 400, 0 )
min_value = -30.0
max_value = 3.0
step = 0.1
value = 0.2

[node name="Label2" type="Label" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 400.0
margin_bottom = 108.0
text = "Sound Effect Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffectVolSlider2" type="HSlider" parent="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 128.0
rect_min_size = Vector2( 400, 0 )
min_value = -30.0
max_value = 3.0

[node name="SettingsToggle" type="Button" parent="SettingsMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
rect_min_size = Vector2( 30, 30 )
rect_rotation = 180.0
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
toggle_mode = true
icon = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhysicsUniverse" parent="." instance=ExtResource( 2 )]

[node name="GameOverScreen" type="CanvasLayer" parent="."]

[node name="GameOverPane" type="TextureRect" parent="GameOverScreen"]
visible = false
self_modulate = Color( 0.282353, 0.231373, 0.384314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
stretch_mode = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverScreen/GameOverPane"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme = ExtResource( 13 )
custom_fonts/normal_font = ExtResource( 17 )
text = "To: Trucker #%^%52-66899
From: Corporate

Wow. 
You just flung yourself into a planet, huh?
How did you think that would go? 
This is coming out of your paycheck.

Love,
your boss"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="GameOverScreen/GameOverPane"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0
custom_fonts/font = ExtResource( 17 )
text = "Reply: \"Yes, boss, I'll try not to do it again.\""
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="arrive_sfx" from="QuestManager" to="AudioManager" method="_on_QuestManager_arrive_sfx"]
[connection signal="stage_sfx" from="QuestManager" to="AudioManager" method="_on_QuestManager_stage_sfx"]
[connection signal="toggled" from="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer/BkgdMusicMuteCheck" to="AudioManager" method="_on_BkgdMusicMuteCheck_toggled"]
[connection signal="toggled" from="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer/SfxMuteCheck" to="AudioManager" method="_on_SfxMuteCheck_toggled"]
[connection signal="value_changed" from="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer/BkgdMusicVolSlider" to="AudioManager" method="_on_BkgdMusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/SettingPane/ScrollContainer/VBoxContainer/SoundEffectVolSlider2" to="AudioManager" method="_on_SoundEffectVolSlider2_value_changed"]
[connection signal="toggled" from="SettingsMenu/SettingsToggle" to="SettingsMenu/SettingPane" method="_on_SettingsToggle_toggled"]
[connection signal="collided_with_cb" from="PhysicsUniverse" to="GameOverScreen/GameOverPane" method="_on_PhysicsUniverse_collided_with_cb"]
[connection signal="leave_cb_orbit" from="PhysicsUniverse" to="QuestManager" method="_on_PhysicsUniverse_leave_cb_orbit"]
[connection signal="orbited_cb" from="PhysicsUniverse" to="QuestManager" method="_on_PhysicsUniverse_orbited_cb"]
[connection signal="pressed" from="GameOverScreen/GameOverPane/RetryButton" to="PhysicsUniverse" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="GameOverScreen/GameOverPane/RetryButton" to="GameOverScreen/GameOverPane" method="_on_RetryButton_pressed"]
